# gobject-introspection

./: .gitignore  configure.ac  meson.build
gir/: meson.build
girepository/: gicallableinfo.c  girepository-private.h  girepository.c  girffi.c  girffi.h
giscanner/: dumper.py  gdumpparser.py  giscannermodule.c  meson.build  scannermain.py  transformer.py
tests/: gimarshallingtests.c  meson.build
tests/scanner/: meson.build
